--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -31,5 +31,6 @@ html {
 
 @import "layout";
 @import "headernavbar";
+@import "page-title.scss";
 @import "auth/signin.scss";
 @import "auth/signup.scss";
