--- a/src/style/form-fields.scss
+++ b/src/style/form-fields.scss
@@ -34,4 +34,10 @@
       outline: none;
     }
   }
+
+  &__gray-button {
+    background: #999;
+    border: 1px solid #999;
+    width: 137px;
+  }
 }
