--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -25,3 +25,7 @@ body {
 @import "page-title";
 @import "form-fields";
 @import "details";
+
+@import "account/account-information.scss";
+@import "account/purchase-history.scss";
+@import "account/account.scss";
