--- a/src/style/account/purchase-history.scss
+++ b/src/style/account/purchase-history.scss
@@ -1,10 +1,22 @@
 .purchase-history {
-  // &__page-title {
-
-  // }
+  &__content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 37px 0px;
+  }
+  &__page-title {
+    border-bottom: 1px solid #ccc;
+  }
+  &__border-bottom {
+    border-bottom: 1px solid #f2f2f2;
+  }
 }
 
 .purchases {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 80px);
+  width: 360px;
+  gap: 10px;
 }
 
 .purchase-detail {
