--- a/src/style/account/account-information.scss
+++ b/src/style/account/account-information.scss
@@ -7,7 +7,12 @@
 
   &__form {
     display: grid;
-    grid-template-rows: [name-s street-address-s] 64px [name-e street-address-e email-s city-s] 64px [email-e city-e zipcode-s state-s] 64px [zipcode-e state-e change-password-s current-s] 64px [change-password-e current-e new-s] 64px [new-e confirm-s] 64px [confirm-e];
+    grid-template-rows:
+      [name-s street-address-s] 64px [name-e street-address-e email-s city-s] 64px [email-e city-e zipcode-s state-s] 64px [zipcode-e state-e change-password-s current-s] 64px [change-password-e current-e new-s] 64px [new-e confirm-s] 64px [confirm-e] minmax(
+        20px,
+        81px
+      )
+      [line-s] 26px [line-e buttons-s] 38px [buttons-e];
     grid-template-columns: [s] 1fr [m] 1fr [e];
     row-gap: 15px;
   }
@@ -65,5 +70,19 @@
   &__new,
   &__confirm {
     transform: translateY(-25px);
+  }
+  &__line {
+    grid-row: line-s/line-e;
+    border-top: 1px solid #ccc;
+    margin-bottom: 24px;
+  }
+  &__cancel {
+    grid-row: buttons-s/buttons-e;
+    grid-column: s/m;
+  }
+  &__update-information {
+    grid-row: buttons-s/buttons-e;
+    grid-column: s/m;
+    transform: translateX(157px);
   }
 }
