added greenpricetag and qunatity components

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -28,10 +28,14 @@ body {
 @import "auth/signup";
 
 // ACCOUNT
-@import "account/account-information.scss";
-@import "account/purchase-history.scss";
-@import "account/account.scss";
+@import "account/account-information";
+@import "account/purchase-history";
+@import "account/account";
 
 // SHOP
-@import "shop/shop.scss";
-@import "shop/shop-search-bar.scss";
+@import "shop/shop";
+@import "shop/shop-search-bar";
+
+// QUANTITY
+@import "quantity";
+@import "green-price-tag";
